tests/paczka1/fuzzy1/38154379.err
Error in line 2: fKv9cTg3G5R S860 2,9
Error in line 13: gibqv S860 6,99
Error in line 16: gibqv A453 92,3
Error in line 25: CmeyC20 A453 52,9
Error in line 30: A319 S860 39,5
